--- a/shape_c_2_default.html
+++ b/shape_c_2_default.html
@@ -198,7 +198,7 @@
 
             <div id="article">
                 <h2>Lipstick Package Test</h2>
-                <img src="img/F/F_default.png" width=500px;>
+                <img src="img/원형_2단_일반.png" width=500px;>
 
             </div>
         </div>
