--- a/shape_c_1_default.html
+++ b/shape_c_1_default.html
@@ -198,7 +198,7 @@
 
             <div id="article">
                 <h2>Lipstick Package Test</h2>
-                <img src="img/C/C_red.png" width=500px;>
+                <img src="img/원형_1단_일반.png" width=500px;>
 
             </div>
         </div>
